🐛 Fixed: Remarks text overflow

--- a/scss/pages/_item.scss
+++ b/scss/pages/_item.scss
@@ -105,7 +105,7 @@
     }
 
     &__text {
-      white-space: pre;
+      white-space: pre-wrap;
       line-height: 1.5em;
 
       @include tablet-p {
